JAMES-3665 Allow customize namespace for as-pod deploy

--- a/server/apps/distributed-app/helm-chart/james/secrets.sample.yaml
+++ b/server/apps/distributed-app/helm-chart/james/secrets.sample.yaml
@@ -19,13 +19,9 @@ james:
       -----END PRIVATE KEY-----
     # A keystore ssl and jwt encoded in base64 with predefined users.
     keystoreJWTinBase64: ""
-    # Optional
-    remoteDeliveryUsername: "change-me"
-    # Optional
-    remoteDeliveryPassword: "change-me"
     s3:
-      endpoint: "https://auth.cloud.ovh.net/v3"
-      region: "GRA5"
+      endpoint: "http://s3-us-east-1.amazonaws.com"
+      region: "US"
       accessKeyId: "change-me"
       secretKey: "change-me"
       bucketNameSuffix: "change-me"
@@ -34,6 +30,6 @@ ldap:
     ldapUser: change-me
     ldapPassword: change-me
 rabbitmq:
-    secret:
-        jamesUser: change-me
-        jamesPassword: change-me
+  secret:
+    jamesUser: change-me
+    jamesPassword: change-me
