JAMES-3670 : Configurable restore location for messages from the Deleted Messages Vault

--- a/server/apps/distributed-pop3-app/sample-configuration/deletedMessageVault.properties
+++ b/server/apps/distributed-pop3-app/sample-configuration/deletedMessageVault.properties
@@ -2,3 +2,7 @@
 # Retention period for your deleted messages into the vault, after which they expire and can be potentially cleaned up
 # Optional, default 1y
 # retentionPeriod=1y
+
+# Mailbox that will contain messages restored from the vault, will be created if it does not exist yet
+# Optional, default 'Restored-Messages' ; must be set to INBOX for POP3
+restoreLocation=INBOX
