--- a/server/apps/distributed-pop3-app/sample-configuration/blob.properties
+++ b/server/apps/distributed-pop3-app/sample-configuration/blob.properties
@@ -73,6 +73,13 @@ objectstorage.s3.accessKeyId=accessKey1
 # Mandatory if you choose s3 storage service, secret key configured in S3
 objectstorage.s3.secretKey=secretKey1
 
+# Optional if you choose s3 storage service: The trust store file, secret, and algorithm to use
+# when connecting to the storage service. If not specified falls back to Java defaults.
+#objectstorage.s3.truststore.path=
+#objectstorage.s3.truststore.type=JKS
+#objectstorage.s3.truststore.secret=
+#objectstorage.s3.truststore.algorithm=SunX509
+
 # ============================================ Blobs Exporting ==============================================
 # Read https://james.apache.org/server/config-blob-export.html for further details
 
