--- a/server/apps/distributed-pop3-app/sample-configuration/jvm.properties
+++ b/server/apps/distributed-pop3-app/sample-configuration/jvm.properties
@@ -3,3 +3,16 @@
 
 # Example: If you need an option -Dmy.property=whatever, you can instead add it here as
 # my.property=whatever
+
+# (Optional). String (size, integer + size units, example: `12 KIB`, supported units are bytes KIB MIB GIB TIB). Defaults to 100KIB.
+# This governs the threshold MimeMessageInputStreamSource relies on for storing MimeMessage content on disk.
+# Below, data is stored in memory. Above data is stored on disk.
+# Lower values will lead to longer processing time but will minimize heap memory usage. Modern SSD hardware
+# should however support a high throughput. Higher values will lead to faster single mail processing at the cost
+# of higher heap usage.
+#james.message.memory.threshold=12K
+
+# Optional. Boolean. Defaults to false. Recommended value is false.
+# Should MimeMessageWrapper use a copy of the message in memory? Or should bigger message exceeding james.message.memory.threshold
+# be copied to temporary files?
+#james.message.usememorycopy=false
