JAMES-3261 Add /root/extensions-jars as a volume for improved discovery

--- a/server/apps/cassandra-app/pom.xml
+++ b/server/apps/cassandra-app/pom.xml
@@ -376,6 +376,7 @@
                         <volumes>
                             <volume>/logs</volume>
                             <volume>/root/conf</volume>
+                            <volume>/root/extensions-jars</volume>
                             <!-- Data for ActiveMQ mailQueue -->
                             <volume>/root/var</volume>
                             <volume>/root/glowroot/plugins</volume>
