--- a/server/apps/distributed-pop3-app/pom.xml
+++ b/server/apps/distributed-pop3-app/pom.xml
@@ -427,6 +427,7 @@
                         <volumes>
                             <volume>/logs</volume>
                             <volume>/root/conf</volume>
+                            <volume>/root/extensions-jars</volume>
                             <volume>/root/glowroot/plugins</volume>
                             <volume>/root/glowroot/data</volume>
                         </volumes>
