--- a/server/apps/jpa-smtp-app/pom.xml
+++ b/server/apps/jpa-smtp-app/pom.xml
@@ -280,6 +280,7 @@
                             <volume>/var/store</volume>
                             <volume>/root/glowroot/plugins</volume>
                             <volume>/root/glowroot/data</volume>
+                            <volume>/root/extensions-jars</volume>
                         </volumes>
                     </container>
                     <extraDirectories>
