JAMES-3680 Make JMAP authentication modularizable

--- a/server/apps/cassandra-app/sample-configuration/jmap.properties
+++ b/server/apps/cassandra-app/sample-configuration/jmap.properties
@@ -22,3 +22,11 @@ tls.secret=james72laBalle
 # Should simple Email/query be resolved against a Cassandra projection, or should we resolve them against ElasticSearch?
 # This enables a higher resilience, but the projection needs to be correctly populated. False by default.
 # view.email.query.enabled=true
+
+# If you want to specify authentication strategies for Jmap draft version
+# For custom Authentication Strategy not inside package "org.apache.james.jmap.http", you have to specify its FQDN
+# authentication.strategy.draft=AccessTokenAuthenticationStrategy,JWTAuthenticationStrategy,QueryParameterAccessTokenAuthenticationStrategy
+
+# If you want to specify authentication strategies for Jmap rfc-8621 version
+# For custom Authentication Strategy not inside package "org.apache.james.jmap.http", you have to specify its FQDN
+# authentication.strategy.rfc8621=JWTAuthenticationStrategy,BasicAuthenticationStrategy
