JAMES-3680 Allow Jmap session endpoint return dynamic prefix in response

--- a/server/protocols/jmap-rfc-8621-integration-tests/distributed-jmap-rfc-8621-integration-tests/src/test/resources/jmap.properties
+++ b/server/protocols/jmap-rfc-8621-integration-tests/distributed-jmap-rfc-8621-integration-tests/src/test/resources/jmap.properties
@@ -2,3 +2,4 @@
 url.prefix=http://domain.com
 websocket.url.prefix=ws://domain.com
 upload.max.size=20M
+dynamic.jmap.prefix.resolution.enabled=true
