--- a/server/protocols/jmap-rfc-8621-integration-tests/memory-jmap-rfc-8621-integration-tests/src/test/resources/jmap.properties
+++ b/server/protocols/jmap-rfc-8621-integration-tests/memory-jmap-rfc-8621-integration-tests/src/test/resources/jmap.properties
@@ -4,3 +4,4 @@ websocket.url.prefix=ws://domain.com
 upload.max.size=20M
 webpush.maxTimeoutSeconds=10
 webpush.maxConnections=10
+dynamic.jmap.prefix.resolution.enabled=true
