--- a/backends-common/pulsar/pom.xml
+++ b/backends-common/pulsar/pom.xml
@@ -17,8 +17,7 @@
     specific language governing permissions and limitations
     under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -48,12 +47,12 @@
         </dependency>
         <dependency>
             <groupId>com.clever-cloud.pulsar4s</groupId>
-            <artifactId>pulsar4s-core_${scala.base}</artifactId>
+            <artifactId>pulsar4s-akka-streams_${scala.base}</artifactId>
             <version>2.8.1</version>
         </dependency>
         <dependency>
             <groupId>com.clever-cloud.pulsar4s</groupId>
-            <artifactId>pulsar4s-akka-streams_${scala.base}</artifactId>
+            <artifactId>pulsar4s-core_${scala.base}</artifactId>
             <version>2.8.1</version>
         </dependency>
         <dependency>
