JAMES-3687 handle review comments

--- a/mpt/impl/smtp/cassandra-pulsar/pom.xml
+++ b/mpt/impl/smtp/cassandra-pulsar/pom.xml
@@ -77,12 +77,12 @@
         </dependency>
         <dependency>
             <groupId>${james.groupId}</groupId>
-            <artifactId>smtp-relay-1</artifactId>
+            <artifactId>pulsar-cassandra-smtp-relay</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>${james.groupId}</groupId>
-            <artifactId>smtp-relay-1</artifactId>
+            <artifactId>pulsar-cassandra-smtp-relay</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
