--- a/protocols/smtp/pom.xml
+++ b/protocols/smtp/pom.xml
@@ -90,6 +90,10 @@
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.james</groupId>
+            <artifactId>james-server-jwt</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
