[UPGRADE] scala maven plugin 3.4.6 -> 4.5.6

--- a/pom.xml
+++ b/pom.xml
@@ -2892,8 +2892,10 @@
                 <plugin>
                     <groupId>net.alchim31.maven</groupId>
                     <artifactId>scala-maven-plugin</artifactId>
-                    <version>3.4.6</version>
+                    <version>4.5.6</version>
                     <configuration>
+                        <source>${target.jdk}</source>
+                        <target>${target.jdk}</target>
                         <args>
                             <arg>-Xlog-implicits</arg>
                             <arg>-feature</arg>
@@ -2906,7 +2908,7 @@
                             <compilerPlugin>
                                 <groupId>org.scalameta</groupId>
                                 <artifactId>semanticdb-scalac_${scala.version}</artifactId>
-                                <version>4.4.23</version>
+                                <version>4.4.31</version>
                             </compilerPlugin>
                         </compilerPlugins>
                     </configuration>
