--- a/server/apps/distributed-pop3-app/docker-configuration/webadmin.properties
+++ b/server/apps/distributed-pop3-app/docker-configuration/webadmin.properties
@@ -22,8 +22,7 @@
 
 enabled=true
 port=8000
-# Use host=0.0.0.0 to listen on all addresses
-host=localhost
+host=0.0.0.0
 
 # Defaults to false
 https.enabled=false
@@ -48,7 +47,6 @@ https.enabled=false
 # Defaults to false
 #cors.enable=true
 #cors.origin
-
 
 # List of fully qualified class names that should be exposed over webadmin
 # in addition to your product default routes. Routes needs to be located
