--- a/server/apps/jpa-app/pom.xml
+++ b/server/apps/jpa-app/pom.xml
@@ -323,6 +323,10 @@
                                 <into>/root/conf</into>
                             </path>
                             <path>
+                                <from>docker-configuration</from>
+                                <into>/root/conf</into>
+                            </path>
+                            <path>
                                 <from>src/main/scripts</from>
                                 <into>/usr/bin</into>
                             </path>
