[UPGRADE] Ical4J: Force commons-codec version to 1.15

--- a/mailet/icalendar/pom.xml
+++ b/mailet/icalendar/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>guava</artifactId>
         </dependency>
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <scope>test</scope>
@@ -82,6 +87,13 @@
             <groupId>org.mnode.ical4j</groupId>
             <artifactId>ical4j</artifactId>
             <version>3.1.1</version>
+            <exclusions>
+                <!--  https://cwe.mitre.org/data/definitions/200.html Fixed by upgrading to commons-codec 1.15 -->
+                <exclusion>
+                    <groupId>commons-codec</groupId>
+                    <artifactId>commons-codec</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
