JAMES-3694 Add a TTL on RabbitMQ queues

--- a/server/apps/distributed-app/sample-configuration/rabbitmq.properties
+++ b/server/apps/distributed-app/sample-configuration/rabbitmq.properties
@@ -73,3 +73,7 @@ mailqueue.size.metricsEnabled=false
 # Disable with caution (this only makes sense in a distributed setup where other nodes consume tasks).
 # Defaults to true.
 task.consumption.enabled=true
+
+# Configure queue ttl (in ms). References: https://www.rabbitmq.com/ttl.html#queue-ttl.
+# Optional integer, defaults is 3600000.
+notification.queue.ttl=3600000
