--- a/server/apps/distributed-app/sample-configuration/rabbitmq.properties
+++ b/server/apps/distributed-app/sample-configuration/rabbitmq.properties
@@ -77,4 +77,4 @@ task.consumption.enabled=true
 # Configure queue ttl (in ms). References: https://www.rabbitmq.com/ttl.html#queue-ttl.
 # This is used only on queues used to share notification patterns, are exclusive to a node. If omitted, it will not add the TTL configure when declaring queues.
 # Optional integer, defaults is 3600000.
-notification.queue.ttl=3600000
+#notification.queue.ttl=3600000
