--- a/pom.xml
+++ b/pom.xml
@@ -2315,6 +2315,11 @@
                 <scope>runtime</scope>
             </dependency>
             <dependency>
+                <groupId>io.lettuce</groupId>
+                <artifactId>lettuce-core</artifactId>
+                <version>6.1.6.RELEASE</version>
+            </dependency>
+            <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty</artifactId>
                 <version>${netty.version}</version>
