JAMES-3693 Provide an API for rate limiting
Implement memory version for it using the RateLimitJ library. Provide
a contract test running against this implementation.

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -85,6 +85,7 @@
         <module>mailet/mailetcontainer-impl</module>
         <module>mailet/mailets</module>
         <module>mailet/mock-smtp-server</module>
+        <module>mailet/rate-limiter</module>
         <module>mailet/rate-limiter-redis</module>
         <module>mailet/remote-delivery-integration-testing</module>
 
