--- a/pom.xml
+++ b/pom.xml
@@ -1767,7 +1767,17 @@
                 <artifactId>james-server-queue-rabbitmq</artifactId>
                 <version>${project.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>${james.groupId}</groupId>
+                <artifactId>james-server-rate-limiter</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
+                <artifactId>james-server-rate-limiter</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+            </dependency>
             <dependency>
                 <groupId>${james.groupId}</groupId>
                 <artifactId>james-server-spring</artifactId>
