--- a/pom.xml
+++ b/pom.xml
@@ -1636,6 +1636,11 @@
             </dependency>
             <dependency>
                 <groupId>${james.groupId}</groupId>
+                <artifactId>james-server-mailets-integration-testing</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
                 <artifactId>james-server-mailrepository-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
