[RELEASE] Docker-compose images should match the one being built

--- a/server/apps/distributed-pop3-app/docker-compose.yml
+++ b/server/apps/distributed-pop3-app/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - rabbitmq
       - s3
     entrypoint: bash -c "java -Dworking.directory=/root/ -Dlogback.configurationFile=/root/conf/logback.xml -jar james-server.jar"
-    image: apache/james:distributed-pop3-3.6.1
+    image: apache/james:distributed-pop3-latest
     container_name: james
     hostname: james.local
     ports:
