--- a/pom.xml
+++ b/pom.xml
@@ -610,7 +610,7 @@
         <junit.vintage.version>5.7.0</junit.vintage.version>
         <concurrent.version>1.3.4</concurrent.version>
         <xbean-spring.version>4.18</xbean-spring.version>
-        <netty.version>3.10.6.Final</netty.version>
+        <netty.version>4.1.72.Final</netty.version>
         <cucumber.version>2.4.0</cucumber.version>
 
         <pax-logging-api.version>1.6.4</pax-logging-api.version>
@@ -2360,7 +2360,7 @@
             </dependency>
             <dependency>
                 <groupId>io.netty</groupId>
-                <artifactId>netty</artifactId>
+                <artifactId>netty-all</artifactId>
                 <version>${netty.version}</version>
             </dependency>
             <dependency>
