--- a/protocols/smtp/pom.xml
+++ b/protocols/smtp/pom.xml
@@ -84,7 +84,8 @@
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty</artifactId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.72.Final</version>
         </dependency>
         <dependency>
             <groupId>javax.inject</groupId>
