JAMES-3693 Add missing dependency declaration in root pom for redis rate limiter module

--- a/pom.xml
+++ b/pom.xml
@@ -1780,6 +1780,11 @@
             </dependency>
             <dependency>
                 <groupId>${james.groupId}</groupId>
+                <artifactId>james-server-rate-limiter-redis</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
                 <artifactId>james-server-spring</artifactId>
                 <version>${project.version}</version>
             </dependency>
