dependency change: netty-all -> netty-handler Fixed discarded pipeline error

--- a/pom.xml
+++ b/pom.xml
@@ -2360,7 +2360,7 @@
             </dependency>
             <dependency>
                 <groupId>io.netty</groupId>
-                <artifactId>netty-all</artifactId>
+                <artifactId>netty-handler</artifactId>
                 <version>${netty.version}</version>
             </dependency>
             <dependency>
