--- a/protocols/netty/pom.xml
+++ b/protocols/netty/pom.xml
@@ -52,7 +52,7 @@
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
+            <artifactId>netty-handler</artifactId>
             <version>4.1.72.Final</version>
         </dependency>
         <dependency>
