--- a/protocols/smtp/pom.xml
+++ b/protocols/smtp/pom.xml
@@ -84,7 +84,7 @@
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
+            <artifactId>netty-handler</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.inject</groupId>
