fixup! JAMES-3724 - Fixing leak resource for MemoryMailRepository - at MemoryMailRepositoryTest

--- a/pom.xml
+++ b/pom.xml
@@ -1584,6 +1584,12 @@
             </dependency>
             <dependency>
                 <groupId>${james.groupId}</groupId>
+                <artifactId>james-server-lifecycle-api</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+            </dependency>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
                 <artifactId>james-server-mail-store</artifactId>
                 <version>${project.version}</version>
             </dependency>
