fixup! fixup! JAMES-3724 - Fixing leak resource for MemoryMailRepository - at MemoryMailRepositoryTest

--- a/server/mailrepository/mailrepository-memory/pom.xml
+++ b/server/mailrepository/mailrepository-memory/pom.xml
@@ -72,4 +72,18 @@
             <artifactId>commons-configuration2</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <systemPropertyVariables>
+                        <james.lifecycle.leak.detection.mode>none</james.lifecycle.leak.detection.mode>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
