fixup! fixup! JAMES-3724 - Fixing leak resource for MemoryMailRepository - at MimeMessageWrapperTest

--- a/server/mailrepository/mailrepository-memory/pom.xml
+++ b/server/mailrepository/mailrepository-memory/pom.xml
@@ -80,7 +80,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <systemPropertyVariables>
-                        <james.lifecycle.leak.detection.mode>none</james.lifecycle.leak.detection.mode>
+                        <james.lifecycle.leak.detection.mode>simple</james.lifecycle.leak.detection.mode>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
