--- a/server/container/core/pom.xml
+++ b/server/container/core/pom.xml
@@ -115,6 +115,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <systemPropertyVariables>
+                        <james.lifecycle.leak.detection.mode>simple</james.lifecycle.leak.detection.mode>
+                    </systemPropertyVariables>
                     <reuseForks>false</reuseForks>
                     <forkCount>1C</forkCount>
                 </configuration>
