JAMES-3763 BlobStore backed MailRepository
Co-Authored-By: Matthieu Baechler <matthieu@apache.org>

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -90,6 +90,7 @@
         <module>mailet/remote-delivery-integration-testing</module>
 
         <module>mailrepository/mailrepository-api</module>
+        <module>mailrepository/mailrepository-blob</module>
         <module>mailrepository/mailrepository-cassandra</module>
         <module>mailrepository/mailrepository-memory</module>
 
